<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".presentation.MainActivity">

    <TextView
        android:id="@+id/tw_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/tw_participants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw_participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participants"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_number_of_participants"
        android:background="@drawable/inputtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tw_participants"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:inputType="number"
        android:elevation="5dp"
        />

    <Button
        android:id="@+id/bt_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/blue"
        android:paddingVertical="10dp"
        android:text="@string/button_start"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/tw_terms"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/tw_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:textColorLink="@color/dark_blue"
        android:pointerIcon="hand"
        />

</androidx.constraintlayout.widget.ConstraintLayout>