<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".presentation.SuggestionActivity">

    <TextView
        android:id="@+id/tw_cat_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tw_act_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tw_cat_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/iw_person"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="300dp"
        app:tint="@color/dark_blue"
        />

    <TextView
        android:id="@+id/tw_part_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:text="@string/participants"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/iw_person"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="305dp"
        android:layout_marginStart="15dp"
        />

    <TextView
        android:id="@+id/tw_part_qt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="60dp"
        />

    <ImageView
        android:id="@+id/iw_price"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_attach_money_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="350dp"
        app:tint="@color/dark_blue"
        />

    <TextView
        android:id="@+id/tw_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/iw_price"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="355dp"
        android:layout_marginStart="15dp"
        />

    <TextView
        android:id="@+id/tw_price_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="60dp"
        />

    <ImageView
        android:id="@+id/iw_list"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_format_list_bulleted_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="400dp"
        app:tint="@color/dark_blue"
        />

    <TextView
        android:id="@+id/tw_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/dark_blue"
        app:layout_constraintStart_toEndOf="@id/iw_list"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="405dp"
        android:layout_marginStart="15dp"
        />

    <Button
        android:id="@+id/bt_try"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/blue"
        android:paddingVertical="10dp"
        android:text="@string/try_another"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>